--- a/public/regisDokter/index.html
+++ b/public/regisDokter/index.html
@@ -54,7 +54,7 @@
     <link rel="stylesheet" href="plugins/fancybox/jquery.fancybox.min.css" />
 
     <!-- Stylesheets -->
-    <link href="../style.css" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet" />
 
     <!--Favicon-->
     <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon" />
@@ -64,7 +64,7 @@
   <body>
     <div class="page-wrapper">
       <nav class="navbar navbar-expand-lg navbar-dark bg-success">
-        <a class="navbar-brand" href="#">Klinik Tongfang</a>
+        <a class="navbar-brand" href="/dokter">Klinik Tongfang</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -78,7 +78,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="#"
+            <a class="nav-item nav-link active" href="/dokter"
               >Home <span class="sr-only">(current)</span></a
             >
             <a class="nav-item nav-link" href="#">About</a>
