--- a/public/home/index.html
+++ b/public/home/index.html
@@ -92,86 +92,31 @@
               >
             </li>
           </ul>
-          <!-- <form class="form-inline my-2 my-lg-0"> -->
-          <div class="form-inline my-2 my-lg-0">
-            <!-- Button trigger modal -->
+          <div class="btn-group">
             <button
               type="button"
-              class="btn btn-outline-light my-2 my-sm-0"
-              data-toggle="modal"
-              data-target="#exampleModalCenter"
-              style="margin-right: 8px;"
+              class="btn btn-outline-success dropdown-toggle"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+              style="color: white;"
+              id="username"
             >
-              <i class="fa fa-lock"></i> Login
+              Hi, { User }
             </button>
-
-            <!-- Login Modal -->
-            <div
-              class="modal fade"
-              id="exampleModalCenter"
-              tabindex="-1"
-              role="dialog"
-              aria-labelledby="exampleModalCenterTitle"
-              aria-hidden="true"
-            >
-              <div class="modal-dialog modal-dialog-centered" role="document">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalCenterTitle">
-                      Login
-                    </h5>
-                    <button
-                      type="button"
-                      class="close"
-                      data-dismiss="modal"
-                      aria-label="Close"
-                    >
-                      <span aria-hidden="true">&times;</span>
-                    </button>
-                  </div>
-                  <div class="modal-body">
-                    <!-- <form> -->
-                      <div class="form-group">
-                        <input
-                          type="email"
-                          class="form-control"
-                          id="email"
-                          aria-describedby="emailHelp"
-                          placeholder="Email"
-                          style="margin-bottom: 24px; width: 100%;"
-                        />
-                      </div>
-                      <div class="form-group">
-                        <input
-                          type="password"
-                          class="form-control"
-                          id="password"
-                          placeholder="password"
-                          style="width: 100%;"
-                        />
-                      </div>
-                    <!-- </form> -->
-                  </div>
-                  <div class="modal-footer">
-                    <button
-                      id="btnRegis"
-                      class="btn btn-secondary"
-                      data-dismiss="modal"
-                    >
-                      Register
-                    </button>
-                    <button id="btnLogin" class="btn btn-success">
-                      Login
-                    </button>
-                  </div>
-                </div>
-              </div>
+            <div class="dropdown-menu dropdown-menu-right">
+              <button class="dropdown-item" type="button">
+                <i class="fa fa-user-circle-o"></i>&nbsp;&nbsp;&nbsp;Profil
+              </button>
+              <button class="dropdown-item" type="button">
+                <i class="fa fa-history"></i>&nbsp;&nbsp;&nbsp;Riwayat
+              </button>
+              <div class="dropdown-divider"></div>
+              <button class="dropdown-item" type="button">
+                <i class="fa fa-sign-out"></i>&nbsp;&nbsp;&nbsp;Log Out
+              </button>
             </div>
-            <button id="btnRegis2" class="btn btn-outline-light my-2 my-sm-0"> 
-              Register
-            </button>
           </div>
-          <!-- </form> -->
         </div>
       </nav>
 
@@ -269,7 +214,7 @@
                       Pelayanan medis kami sudah tidak diragukan hingga ke
                       tingkat internasional.
                     </p>
-                    <a href="#testimonitongfang" class="btn btn-main btn-white"
+                    <a href="#" class="btn btn-main btn-white"
                       >Lihat Testimoni</a
                     >
                   </div>
@@ -448,7 +393,6 @@
       <!-- Testimonial -->
       <section
         class="testimonial-section"
-        id="testimonitongfang"
         style="background: url(images/testimonials/1.jpg);"
       >
         <div class="container">
@@ -598,7 +542,7 @@
                       </div>
                       <div
                         id="collapseOne"
-                        class="panel-collapse collapse show"
+                        class="panel-collapse collapse in"
                         role="tabpanel"
                         aria-labelledby="headingOne"
                       >
