--- a/public/regisPasien/index.html
+++ b/public/regisPasien/index.html
@@ -53,7 +53,7 @@
     <link rel="stylesheet" href="plugins/fancybox/jquery.fancybox.min.css" />
 
     <!-- Stylesheets -->
-    <link href="../style.css" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet" />
 
     <!--Favicon-->
     <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon" />
@@ -63,7 +63,7 @@
   <body>
     <div class="page-wrapper">
       <nav class="navbar navbar-expand-lg navbar-dark bg-success">
-        <a class="navbar-brand" href="#">Klinik Tongfang</a>
+        <a class="navbar-brand" href="/">Klinik Tongfang</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -77,7 +77,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="#"
+            <a class="nav-item nav-link active" href="/"
               >Home <span class="sr-only">(current)</span></a
             >
             <a class="nav-item nav-link" href="#">About</a>
