--- a/public/index.html
+++ b/public/index.html
@@ -57,8 +57,8 @@
     <link href="style.css" rel="stylesheet" />
 
     <!--Favicon-->
-    <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon" />
-    <link rel="icon" href="../images/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="../images/logo.png" type="image/png" />
+    <link rel="icon" href="../images/logo.png" type="image/png" />
   </head>
 
   <body>
