--- a/test.html
+++ b/test.html
@@ -6,9 +6,15 @@
 </head>
 <body>
   <div class="box">
-    
+    <form>
+      <input class="target" type="text" value="Field 1">
+      <select class="target">
+        <option value="option1" selected="selected">Option 1</option>
+        <option value="option2">Option 2</option>
+      </select>
+    </form>
   </div>  
-
+  
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js" integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
   <script>
