--- a/public/regisDokter/index.html
+++ b/public/regisDokter/index.html
@@ -207,7 +207,10 @@
                   </div> -->
                 </div>
               </div>
-
+              <!-- <div class="form-group custom-file" style="margin-bottom: 32px;">
+                <input type="file" class="custom-file-input" id="foto" required>
+                <label class="custom-file-label" for="foto">Choose file...</label>
+              </div> -->
               <div class="form-group row">
                 <center>
                   <p>
