--- a/public/regisDokter/index.html
+++ b/public/regisDokter/index.html
@@ -88,6 +88,9 @@
       </nav>
 
       <!-- Form Register -->
+      <div id="alert">
+
+      </div>
       <center>
         <h1 style="margin-top: 48px;">Register</h1>
       </center>
